--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <link rel="stylesheet" href="https://cdn.rawgit.com/twbs/bootstrap/v4-dev/dist/css/bootstrap.css">
-    <link href='https://fonts.googleapis.com/css?family=Raleway:400,200,600,800' rel='stylesheet' type='text/css'>
+    <link href="https://fonts.googleapis.com/css?family=Raleway:400,200,600,800" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="style/style.css">
   </head>
   <body>
